# code_serializer

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
examples/: main.cpp
include/: record.h  record_bits.h  serialize.h
src/: main.cpp  record.cpp
tests/: main_test.cpp  perf_bench.cpp
